<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Simon</string>
    <string name="start">START GAME</string>
    <string name="pause">PAUSE</string>
    <string name="resume">RESUME</string>
    <string name="end">END GAME</string>
    <string name="master_vol">MASTER</string>
    <string name="music_vol">MUSIC</string>
    <string name="vol_game">EFFECTS</string>
    <string name="placeholder_empty">Press the buttons</string>

    <!-- SETTINGS -->
    <string name="sound_effects">Sound Effects</string>
    <string name="game_speed">Game Speed</string>
    <string name="colorblind_label">Colorblind Mode</string>
    <string name="language_label">Language</string>
    <string name="theme_label">Theme</string>
    <string name="repetitions_label">Allow Repetitions</string>
    <string name="light_mode">Light</string>
    <string name="dark_mode">Dark</string>
    <string name="on">ON</string>
    <string name="en" translatable="false">EN</string>
    <string name="it" translatable="false">IT</string>
    <string name="off">OFF</string>
    <string name="reset_default">RESET TO DEFAULT</string>
    <string name="delete_records">DELETE ALL</string>
    <string name="confirm_delete">Are you sure you want to delete all records?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="confirm">CONFIRM DELETION</string>
    <string name="repetition_locked">Cannot change repetitions during a game</string>

    <!-- RECORDS -->
    <string name="top_scores">TOP 3 SCORES</string>
    <string name="recent_games">RECENT GAMES</string>
    <string name="_1st" translatable="false">1st</string>
    <string name="_2nd" translatable="false">2nd</string>
    <string name="_3rd" translatable="false">3rd</string>
    <string name="go_play">Go play a game</string>
    <string name="score">SCORE: </string>
    <string name="rep" translatable="false">REP: </string>
</resources>